src/objects/FieloAlpha__Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloAlpha__Member__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionItem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Redemption Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Redemption__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Redemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Transaction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transaction</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>